--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,9 +5,15 @@
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-rgb: 255, 255, 255;
+  --font-fira-sans: 'Fira Sans', sans-serif;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
+  font-family: var(--font-fira-sans);
+}
+
+.fira-sans-text {
+  font-family: var(--font-fira-sans);
 }
