--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,9 +4,11 @@
 @tailwind components;
 @tailwind utilities;
 
+#root,*{
+    font-family: 'Fira Sans', sans-serif !important;
+}
 body {
     margin: 0;
-    font-family: 'Fira Sans', sans-serif;
     font-size: 16px;
     line-height: 1.5;
     color: black;
