kim@nh tao nut them bieu mau

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -9,4 +9,5 @@
     --color-gray-stroke: #C6C5C5;
     --color-gray-fill: #888686;
     --color-gray: #D9D9D9;
+    --color-gray-light: #19181880;
 }
